@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-07T08:21:07Z",
-  "count_outdated" : 2316,
-  "uniques_outdated" : 526,
-  "count" : 2348,
-  "uniques" : 544,
+  "timestamp" : "2022-08-07T16:23:25Z",
+  "count_outdated" : 2319,
+  "uniques_outdated" : 528,
+  "count" : 2350,
+  "uniques" : 545,
   "clones" : [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 3,
